--- a/c++/config.json
+++ b/c++/config.json
@@ -23,7 +23,7 @@
         {
             "result_socket_type": "pushpull",
             "result_dataflow_type": "binary",
-            "result_lp_socket": "tcp://127.0.0.1:5566",
+            "result_lp_socket": "tcp://192.168.166.127:5566",
             "result_hp_socket": "tcp://127.0.0.1:5567",
             "num_workers": 5,
             "name": "Rate",
@@ -40,7 +40,7 @@
         "dataflow_type": "binary",
         "processing_type": "thread",
         "datasocket_type": "pushpull",
-        "data_lp_socket": "tcp://127.0.0.1:5566",
+        "data_lp_socket": "tcp://tcp://192.168.166.127:5566",
         "data_hp_socket": "tcp://127.0.0.1:5567",
         "command_socket": "tcp://127.0.0.1:5568",
         "monitoring_socket": "tcp://127.0.0.1:5561",
