--- a/c++/config-rp-dam.json
+++ b/c++/config-rp-dam.json
@@ -15,7 +15,7 @@
         "dataflow_type": "binary",
         "processing_type": "thread",
         "datasocket_type": "pubsub",
-        "data_lp_socket": "tcp://127.0.0.1:1234",
+        "data_lp_socket": "tcp://192.168.176.122:1234",
         "data_hp_socket": "tcp://127.0.0.1:5565",
         "command_socket": "tcp://127.0.0.1:5568",
         "monitoring_socket": "tcp://127.0.0.1:5561",
@@ -25,13 +25,13 @@
                 "result_dataflow_type": "binary",
                 "result_lp_socket": "tcp://127.0.0.1:5566",
                 "result_hp_socket": "tcp://127.0.0.1:5567",
-                "num_workers": 5,
+                "num_workers": 1,
                 "name": "Rate",
                 "name_workers": "worker"
             }
         ],
-        "logs_path": "/tmp/",
-        "logging": "file",
+        "logs_path": "./",
+        "logging": "console",
         "logs_level": 5,
         "comment": "datasockettype=pushpull|pubsub|custom dataflowtype=binary|filename|string processingtype=process|thread logging=file|console|both|none"
     },
