--- a/c++/config-rp-dam.json
+++ b/c++/config-rp-dam.json
@@ -31,7 +31,7 @@
             }
         ],
         "logs_path": "./",
-        "logging": "console",
+        "logging": "none",
         "logs_level": 5,
         "comment": "datasockettype=pushpull|pubsub|custom dataflowtype=binary|filename|string processingtype=process|thread logging=file|console|both|none"
     },
